// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DateRange change date range and dispatch 1`] = `
<div>
  <div
    class="dateRange d-flex p-2"
  >
    <div
      class="row"
    >
      <div
        class="col-md-2 col-sm-12"
      >
        <div
          class="dateRange-title"
        >
          Range
        </div>
      </div>
      <div
        class="col-md-8 col-sm-12"
      >
        <div
          class="DateRangePicker DateRangePicker_1"
        >
          <div>
            <div
              class="DateRangePickerInput DateRangePickerInput_1 DateRangePickerInput__withBorder DateRangePickerInput__withBorder_2"
            >
              <div
                class="DateInput DateInput_1"
              >
                <input
                  aria-describedby="DateInput__screen-reader-message-start-date"
                  aria-label="Start Date"
                  autocomplete="off"
                  class="DateInput_input DateInput_input_1"
                  id="start-date"
                  name="start-date"
                  placeholder="Start Date"
                  type="text"
                  value="04/03/2022"
                />
                <p
                  class="DateInput_screenReaderMessage DateInput_screenReaderMessage_1"
                  id="DateInput__screen-reader-message-start-date"
                >
                  Navigate forward to interact with the calendar and select a date. Press the question mark key to get the keyboard shortcuts for changing dates.
                </p>
              </div>
              <div
                aria-hidden="true"
                class="DateRangePickerInput_arrow DateRangePickerInput_arrow_1"
                role="presentation"
              >
                <svg
                  class="DateRangePickerInput_arrow_svg DateRangePickerInput_arrow_svg_1"
                  focusable="false"
                  viewBox="0 0 1000 1000"
                >
                  <path
                    d="M694 242l249 250c12 11 12 21 1 32L694 773c-5 5-10 7-16 7s-11-2-16-7c-11-11-11-21 0-32l210-210H68c-13 0-23-10-23-23s10-23 23-23h806L662 275c-21-22 11-54 32-33z"
                  />
                </svg>
              </div>
              <div
                class="DateInput DateInput_1"
              >
                <input
                  aria-describedby="DateInput__screen-reader-message-end-date"
                  aria-label="End Date"
                  autocomplete="off"
                  class="DateInput_input DateInput_input_1"
                  id="end-date"
                  name="end-date"
                  placeholder="End Date"
                  type="text"
                  value="04/14/2022"
                />
                <p
                  class="DateInput_screenReaderMessage DateInput_screenReaderMessage_1"
                  id="DateInput__screen-reader-message-end-date"
                >
                  Navigate backward to interact with the calendar and select a date. Press the question mark key to get the keyboard shortcuts for changing dates.
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="col-md-2 col-sm-12"
      >
        <a
          href="/?fromDate_=Invalid date&toDate_=2022-04-14"
        >
          <button
            class="m-1 btn btn-success"
            type="button"
          >
            OKE
          </button>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`DateRange renders correctly 1`] = `
<div>
  <div
    class="dateRange d-flex p-2"
  >
    <div
      class="row"
    >
      <div
        class="col-md-2 col-sm-12"
      >
        <div
          class="dateRange-title"
        >
          Range
        </div>
      </div>
      <div
        class="col-md-8 col-sm-12"
      >
        <div
          class="DateRangePicker DateRangePicker_1"
        >
          <div>
            <div
              class="DateRangePickerInput DateRangePickerInput_1 DateRangePickerInput__withBorder DateRangePickerInput__withBorder_2"
            >
              <div
                class="DateInput DateInput_1"
              >
                <input
                  aria-describedby="DateInput__screen-reader-message-start-date"
                  aria-label="Start Date"
                  autocomplete="off"
                  class="DateInput_input DateInput_input_1"
                  id="start-date"
                  name="start-date"
                  placeholder="Start Date"
                  type="text"
                  value="04/14/2022"
                />
                <p
                  class="DateInput_screenReaderMessage DateInput_screenReaderMessage_1"
                  id="DateInput__screen-reader-message-start-date"
                >
                  Navigate forward to interact with the calendar and select a date. Press the question mark key to get the keyboard shortcuts for changing dates.
                </p>
              </div>
              <div
                aria-hidden="true"
                class="DateRangePickerInput_arrow DateRangePickerInput_arrow_1"
                role="presentation"
              >
                <svg
                  class="DateRangePickerInput_arrow_svg DateRangePickerInput_arrow_svg_1"
                  focusable="false"
                  viewBox="0 0 1000 1000"
                >
                  <path
                    d="M694 242l249 250c12 11 12 21 1 32L694 773c-5 5-10 7-16 7s-11-2-16-7c-11-11-11-21 0-32l210-210H68c-13 0-23-10-23-23s10-23 23-23h806L662 275c-21-22 11-54 32-33z"
                  />
                </svg>
              </div>
              <div
                class="DateInput DateInput_1"
              >
                <input
                  aria-describedby="DateInput__screen-reader-message-end-date"
                  aria-label="End Date"
                  autocomplete="off"
                  class="DateInput_input DateInput_input_1"
                  id="end-date"
                  name="end-date"
                  placeholder="End Date"
                  type="text"
                  value="04/14/2022"
                />
                <p
                  class="DateInput_screenReaderMessage DateInput_screenReaderMessage_1"
                  id="DateInput__screen-reader-message-end-date"
                >
                  Navigate backward to interact with the calendar and select a date. Press the question mark key to get the keyboard shortcuts for changing dates.
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="col-md-2 col-sm-12"
      >
        <a
          href="/?fromDate_=2022-04-14&toDate_=2022-04-14"
        >
          <button
            class="m-1 btn btn-success"
            type="button"
          >
            OKE
          </button>
        </a>
      </div>
    </div>
  </div>
</div>
`;
